--- a/api-config/src/main/resources/config/common/zipkin.properties
+++ b/api-config/src/main/resources/config/common/zipkin.properties
@@ -1,4 +1,4 @@
-#链路监控
+#====================链路监控====================
 #zipkin收集器
 spring.zipkin.sender.type=rabbit
 spring.zipkin.rabbitmq.queue=${system.message.zipkin}
