--- a/api-config/src/main/resources/config/main/api-gateway-www.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-www.properties
@@ -2,7 +2,7 @@
 management.endpoint.shutdown.enabled=true
 #公开所有端点
 management.endpoints.web.exposure.include=*
-#路由规则
+#====================路由规则====================
 #静态资源
 zuul.routes.resources.path=/resources/**
 zuul.routes.resources.service-id=api-www-resources
@@ -11,6 +11,6 @@ zuul.routes.resources.strip-prefix=false
 zuul.routes.www.path=/**
 zuul.routes.www.service-id=api-www
 zuul.routes.www.strip-prefix=false
-#设置cookie等身份敏感信息，如果需要路由到外部服务请不要这样设置，防止身份信息泄露
 zuul.routes.www.sensitive-headers=
+#====================安全配置====================
 zuul.ignore-security-headers=false
