--- a/api-config/src/main/resources/config/main/api-www-admin.properties
+++ b/api-config/src/main/resources/config/main/api-www-admin.properties
@@ -2,10 +2,12 @@
 management.endpoint.shutdown.enabled=true
 #公开所有端点
 management.endpoints.web.exposure.include=*
-#turbine配置
+#====================turbine====================
 turbine.stream.destination=${system.message.turbine}
-#防止zipkin进入首页异常
+#====================系统配置====================
+#解决zipkin资源加载异常导致页面无法显示
 management.metrics.web.server.auto-time-requests=false
+#====================zipkin====================
 #zipkin收集器
 zipkin.collector.http.enabled=false
 zipkin.collector.rabbitmq.addresses=${spring.rabbitmq.addresses}
@@ -13,5 +15,6 @@ zipkin.collector.rabbitmq.username=${spring.rabbitmq.username}
 zipkin.collector.rabbitmq.password=${spring.rabbitmq.password}
 zipkin.collector.rabbitmq.virtual-host=${spring.rabbitmq.virtual-host}
 zipkin.collector.rabbitmq.queue=${system.message.zipkin}
+#====================hystrix====================
 #关闭hystrix.stream端点
 management.endpoint.hystrix.stream.enabled=false
