--- a/api-config/src/main/resources/config/main/api-www-resources.properties
+++ b/api-config/src/main/resources/config/main/api-www-resources.properties
@@ -2,6 +2,7 @@
 management.endpoint.shutdown.enabled=true
 #暴露端点
 management.endpoints.web.exposure.include=*
+#====================静态资源====================
 #静态资源缓存配置
 spring.resources.cache.cachecontrol.max-age=2592000
 spring.resources.cache.cachecontrol.cache-public=true
