--- a/api-config/src/main/resources/config/common/c3p0.properties
+++ b/api-config/src/main/resources/config/common/c3p0.properties
@@ -1,4 +1,5 @@
-#C3P0连接池配置：https://blog.csdn.net/xb12369/article/details/41517409
+#====================C3P0====================
+#详细属性说明：https://blog.csdn.net/xb12369/article/details/41517409
 c3p0.jdbcUrl=${spring.datasource.url}
 c3p0.user=${spring.datasource.username}
 c3p0.password=${spring.datasource.password}
