--- a/api-config/src/main/resources/config/common/freemarker.properties
+++ b/api-config/src/main/resources/config/common/freemarker.properties
@@ -1,4 +1,4 @@
-#freemarker
+#====================freemarker====================
 #freemarker缓存
 #spring.freemarker.cache=true
 #读取JAR中的freemarker文件
