--- a/api-config/src/main/resources/config/common/hystrix.properties
+++ b/api-config/src/main/resources/config/common/hystrix.properties
@@ -1,5 +1,5 @@
-#hystrix配置
-#hystrix流
+#====================hystrix====================
+#hystrix队列
 hystrix.stream.queue.destination=${system.message.turbine}
 #关闭hystrix.stream端点
 management.endpoint.hystrix.stream.enabled=false
