--- a/api-config/src/main/resources/config/common/web.properties
+++ b/api-config/src/main/resources/config/common/web.properties
@@ -1,6 +1,7 @@
-#服务配置
+#====================服务配置====================
 #服务端口号
 server.port=${system.type}${system.sn}
+#====================tomcat====================
 #tomcat配置：代理、线程、编码
 server.use-forward-headers=true
 server.tomcat.port-header=x-forwarded-port
@@ -9,6 +10,6 @@ server.tomcat.remote-ip-header=x-forwarded-for
 server.tomcat.max-threads=1000
 server.tomcat.accept-count=200
 server.tomcat.uri-encoding=UTF-8
-#cookie设置
+#====================cookie====================
 server.servlet.session.cookie.name=ACGISTID
 server.servlet.session.cookie.http-only=true
