--- a/api-config/src/main/resources/config/main/api-gateway-service.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-service.properties
@@ -2,14 +2,11 @@
 management.endpoint.shutdown.enabled=true
 #公开所有端点
 management.endpoints.web.exposure.include=*
-#路由规则
+#====================路由规则====================
+#订单服务
 zuul.routes.order.path=/gateway/api/order/**
 zuul.routes.order.service-id=api-service-order
 zuul.routes.order.strip-prefix=false
-#统一添加版本
-#zuul.prefix=/V1
-#是否重试
-#zuul.retryable=false
-#网关消息
+#====================网关消息====================
 spring.cloud.stream.bindings.api_message_gateway_sender.binder=rabbit
 spring.cloud.stream.bindings.api_message_gateway_sender.destination=${system.message.gateway}
