--- a/api-gateway/api-gateway-service/src/main/resources/bootstrap.properties
+++ b/api-gateway/api-gateway-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=system
 spring.application.name=api-gateway-service
-spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,zuul,zipkin,hystrix
+spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,zuul,zipkin,hystrix,redis
 spring.cloud.config.fail-fast=true
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=api-config
