--- a/pom.xml
+++ b/pom.xml
@@ -34,22 +34,24 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.5.RELEASE</version>
+		<version>2.1.0.RELEASE</version>
 		<relativePath />
 	</parent>
 
 	<properties>
-		<java.version>10</java.version>
-		<spring-cloud.version>Finchley.SR1</spring-cloud.version>
-		<spring-boot-admin.version>2.0.4</spring-boot-admin.version>
+		<java.version>11</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		
+		<spring-cloud.version>Greenwich.M1</spring-cloud.version>
+		
 		<c3p0.version>0.9.5.2</c3p0.version>
 		<zipkin.version>2.11.7</zipkin.version>
 		<activation.version>1.1.1</activation.version>
-		<commons-lang3.version>3.8</commons-lang3.version>
+		<jaxb-runtime.version>2.3.1</jaxb-runtime.version>
 		<commons-codec.version>1.11</commons-codec.version>
-		<jaxb-runtime.version>2.3.0.1</jaxb-runtime.version>
+		<commons-lang3.version>3.8.1</commons-lang3.version>
+		<spring-boot-admin.version>2.0.4</spring-boot-admin.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<mysql-connector-java.version>5.1.47</mysql-connector-java.version>
 	</properties>
