--- a/api-www/api-www-admin/src/main/resources/bootstrap.properties
+++ b/api-www/api-www-admin/src/main/resources/bootstrap.properties
@@ -5,3 +5,5 @@ spring.cloud.config.fail-fast=true
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=api-config
 eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/
+#允许main方法内覆盖bean
+spring.main.allow-bean-definition-overriding=true
