--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+#ºöÂÔÎÄ¼ş
 *.iml
 
+#ºöÂÔÅäÖÃ
 .idea
 .project
 .settings
@@ -9,5 +11,6 @@
 .apt_generated
 .apt_generated_tests
 
+#ºöÂÔÄ¿Â¼
 **/logs/
 **/target/
