--- a/api-config/src/main/resources/config/common/data.properties
+++ b/api-config/src/main/resources/config/common/data.properties
@@ -1,8 +1,8 @@
 #====================数据库====================
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_api?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
-#spring.datasource.password=
+#spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #====================JPA====================
 spring.jpa.database=MYSQL
