--- a/api-config/src/main/resources/application.properties
+++ b/api-config/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=${system.type}${system.sn}
 spring.profiles.active=native,system
 spring.application.name=api-config
 eureka.instance.prefer-ip-address=true
-logging.config=classpath:logback-spring.xml
+logging.config=classpath:logback-api.xml
 #注册中心
 eureka.client.service-url.defaultZone=http://127.0.0.1:21010/eureka/
 #实例名称
