--- a/api-registry/src/main/resources/application.properties
+++ b/api-registry/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=${system.type}${system.sn}
 spring.profiles.active=system
 spring.application.name=api-registry
 eureka.instance.prefer-ip-address=true
-logging.config=classpath:logback-spring.xml
+logging.config=classpath:logback-api.xml
 #主机名
 eureka.instance.hostname=localhost
 #维护服务，不需要检索服务，注册中心为单点时设置为false。集群时设置为true
