--- a/api-config/src/main/resources/config/common/logger.properties
+++ b/api-config/src/main/resources/config/common/logger.properties
@@ -1,2 +1,3 @@
 #====================日志====================
-logging.config=classpath:logback-spring.xml
+#不能配置logback.xml/logback-spring.xml，这两个属性是默认配置，会导致springProperty不能正常加载
+logging.config=classpath:logback-api.xml
