--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -1,17 +1,19 @@
+#====================系统配置====================
 #系统名称
-#系统配置
 system.name=${spring.application.name}
 #静态资源地址
 #system.static.base=http://localhost:28010
 system.static.base=http://localhost:38050
 #bus消息（交换机）
 system.message.bus=api.message.bus
+#logback日志消息（交换机）
+system.message.logs=api.message.logs
 #网关消息（交换机）
 system.message.gateway=api.message.gateway
 #hystrix消息（交换机）
 system.message.turbine=api.message.turbine
 #zipkin消息（队列名）
-system.message.zipkin=api-zipkin
+system.message.queue.zipkin=api-zipkin
 #端点内网地址：多个使用逗号隔开
 system.actuator.ip.addresses=0:0::/112,192.168.1.0/24
 #端点地址：多个使用逗号隔开
