日志配置集中管理

--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -18,3 +18,5 @@ system.message.queue.zipkin=api-zipkin
 system.actuator.ip.addresses=0:0::/112,192.168.1.0/24
 #端点地址：多个使用逗号隔开
 system.actuator.ant.matchers=/actuator/**
+#配置中心地址
+system.config.server.url=http://localhost:22010
