--- a/api-www/api-www/pom.xml
+++ b/api-www/api-www/pom.xml
@@ -27,6 +27,10 @@
 			<artifactId>api-common-order</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-bus</artifactId>
 		</dependency>
