--- a/api-www/api-www-admin/pom.xml
+++ b/api-www/api-www-admin/pom.xml
@@ -32,6 +32,10 @@
 		    <artifactId>zipkin-server</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
 		    <groupId>io.zipkin.java</groupId>
 		    <artifactId>zipkin-autoconfigure-ui</artifactId>
 		</dependency>
