--- a/api-config/src/main/resources/config/common/mail.properties
+++ b/api-config/src/main/resources/config/common/mail.properties
@@ -1,7 +1,7 @@
 #====================邮件配置====================
 spring.mail.host=smtp.exmail.qq.com
-spring.mail.username=你的邮箱
-spring.mail.password=你的密码
+spring.mail.username=邮箱
+spring.mail.password=ENC(JASYPT加密处理后的密码)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
