--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -20,3 +20,5 @@ system.actuator.ip.addresses=0:0::/112,192.168.1.0/24
 system.actuator.ant.matchers=/actuator/**
 #配置中心地址
 system.config.server.url=http://localhost:22010
+#系统加密盐值
+jasypt.encryptor.password=acgist
