--- a/api-service/api-service-user/src/main/resources/bootstrap.properties
+++ b/api-service/api-service-user/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=system
 spring.application.name=api-service-user
-spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,data,c3p0,bus,zipkin
+spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,database,c3p0,bus,zipkin
 spring.cloud.config.fail-fast=true
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=api-config
