--- a/api-config/src/main/resources/config/common/stream.properties
+++ b/api-config/src/main/resources/config/common/stream.properties
@@ -3,7 +3,7 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.addresses=${spring.rabbitmq.host}:${spring.rabbitmq.port}
 spring.rabbitmq.username=guest
-spring.rabbitmq.password=ENC(I7DVr7jHrVhjJExmqTJF0g==)
+spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
 #====================stream绑定器====================
 spring.cloud.stream.binders.rabbit.type=rabbit
