--- a/api-config/src/main/resources/config/common/database.properties
+++ b/api-config/src/main/resources/config/common/database.properties
@@ -1,8 +1,7 @@
 #====================数据库====================
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_api?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-#数据库默认密码：root
-#spring.datasource.password=ENC(ijdN9CNvLcbNQ5lZDnFauA==)
+#spring.datasource.password=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #====================JPA====================
