优化监控信息

--- a/api-config/src/main/resources/config/system/api-www-admin-system.properties
+++ b/api-config/src/main/resources/config/system/api-www-admin-system.properties
@@ -6,3 +6,5 @@ system.type=380
 system.security.enable=true
 #不需要鉴权的地址
 system.security.allow.attributes=/login,/logout,/error,/favicon.ico,/actuator/**,/resources/**
+#修改cookie名称，防止前后端使用redis session时导致ClassNotFoundException
+server.servlet.session.cookie.name=ADMINID
