--- a/api-config/src/main/resources/config/main/api-www-admin.properties
+++ b/api-config/src/main/resources/config/main/api-www-admin.properties
@@ -14,7 +14,7 @@ zipkin.collector.rabbitmq.addresses=${spring.rabbitmq.addresses}
 zipkin.collector.rabbitmq.username=${spring.rabbitmq.username}
 zipkin.collector.rabbitmq.password=${spring.rabbitmq.password}
 zipkin.collector.rabbitmq.virtual-host=${spring.rabbitmq.virtual-host}
-zipkin.collector.rabbitmq.queue=${system.message.zipkin}
+zipkin.collector.rabbitmq.queue=${system.message.queue.zipkin}
 #====================hystrix====================
 #关闭hystrix.stream端点
 management.endpoint.hystrix.stream.enabled=false
