--- a/api-config/src/main/resources/config/common/database.properties
+++ b/api-config/src/main/resources/config/common/database.properties
@@ -9,5 +9,7 @@ spring.jpa.database=MYSQL
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
+#修改数据库引擎
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #配置不使用JDBC链接，使用连接池
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
