--- a/api-www/api-www/pom.xml
+++ b/api-www/api-www/pom.xml
@@ -12,7 +12,7 @@
 
 	<parent>
 		<groupId>com.acgist</groupId>
-		<artifactId>api-acgist</artifactId>
+		<artifactId>api-parent</artifactId>
 		<version>1.0.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
