配置语义优化

--- a/api-config/src/main/resources/config/main/api-service-gateway.properties
+++ b/api-config/src/main/resources/config/main/api-service-gateway.properties
@@ -5,4 +5,4 @@ management.endpoints.web.exposure.include=*
 #====================网关消息====================
 spring.cloud.stream.bindings.api_message_gateway_receiver.binder=rabbit
 spring.cloud.stream.bindings.api_message_gateway_receiver.destination=${system.message.gateway}
-spring.cloud.stream.bindings.api_message_gateway_receiver.group=${spring.application.name}
+spring.cloud.stream.bindings.api_message_gateway_receiver.group=${system.message.gateway.queue}
