--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -10,6 +10,8 @@ system.message.bus=api.message.bus
 system.message.logs=api.message.logs
 #网关消息（交换机）
 system.message.gateway=api.message.gateway
+#网关消息（队列名）
+system.message.gateway.queue=${spring.application.name}
 #hystrix消息（交换机）
 system.message.turbine=api.message.turbine
 #zipkin消息（队列名）
