优化邮件异步发送，添加异步处理模块

--- a/api-config/src/main/resources/config/main/api-www-admin.properties
+++ b/api-config/src/main/resources/config/main/api-www-admin.properties
@@ -18,3 +18,7 @@ zipkin.collector.rabbitmq.queue=${system.message.queue.zipkin}
 #====================hystrix====================
 #关闭hystrix.stream端点
 management.endpoint.hystrix.stream.enabled=false
+#====================stream====================
+#邮件发送
+spring.cloud.stream.bindings.api_message_mail_sender.binder=rabbit
+spring.cloud.stream.bindings.api_message_mail_sender.destination=${system.message.mail}
