--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -11,7 +11,11 @@ system.message.logs=api.message.logs
 #网关消息（交换机）
 system.message.gateway=api.message.gateway
 #网关消息（队列名）
-system.message.gateway.queue=${spring.application.name}
+system.message.gateway.queue=api-gateway-receiver
+#网关消息（交换机）
+system.message.mail=api.message.mail
+#网关消息（队列名）
+system.message.mail.queue=api-mail-receiver
 #hystrix消息（交换机）
 system.message.turbine=api.message.turbine
 #zipkin消息（队列名）
