--- a/api-config/src/main/resources/config/main/api-gateway-service.properties
+++ b/api-config/src/main/resources/config/main/api-gateway-service.properties
@@ -7,6 +7,7 @@ management.endpoints.web.exposure.include=*
 zuul.routes.order.path=/gateway/api/order/**
 zuul.routes.order.service-id=api-service-order
 zuul.routes.order.strip-prefix=false
-#====================网关消息====================
+#====================stream====================
+#网关信息
 spring.cloud.stream.bindings.api_message_gateway_sender.binder=rabbit
 spring.cloud.stream.bindings.api_message_gateway_sender.destination=${system.message.gateway}
