--- a/api-www/api-www-admin/pom.xml
+++ b/api-www/api-www-admin/pom.xml
@@ -21,6 +21,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.acgist</groupId>
+			<artifactId>api-common-asyn</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.acgist</groupId>
 			<artifactId>api-common-user</artifactId>
 		</dependency>
 		<dependency>
@@ -30,10 +34,6 @@
 		<dependency>
 		    <groupId>io.zipkin.java</groupId>
 		    <artifactId>zipkin-server</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
 		    <groupId>io.zipkin.java</groupId>
