--- a/pom.xml
+++ b/pom.xml
@@ -27,18 +27,18 @@
 		<module>api-config</module>
 		<module>api-registry</module>
 		<module>api-common/api-common</module>
+		<module>api-common/api-common-asyn</module>
 		<module>api-common/api-common-user</module>
 		<module>api-common/api-common-order</module>
-		<module>api-common/api-common-gateway</module>
 		<module>api-gateway/api-gateway-www</module>
 		<module>api-gateway/api-gateway-admin</module>
 		<module>api-gateway/api-gateway-service</module>
 		<module>api-www/api-www</module>
 		<module>api-www/api-www-admin</module>
 		<module>api-www/api-www-resources</module>
+		<module>api-service/api-service-asyn</module>
 		<module>api-service/api-service-user</module>
 		<module>api-service/api-service-order</module>
-		<module>api-service/api-service-gateway</module>
 	</modules>
 
 	<properties>
@@ -98,7 +98,7 @@
 			</dependency>
 			<dependency>
 				<groupId>com.acgist</groupId>
-				<artifactId>api-common-gateway</artifactId>
+				<artifactId>api-common-asyn</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
