--- a/api-www/api-www-admin/pom.xml
+++ b/api-www/api-www-admin/pom.xml
@@ -79,7 +79,7 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 		<!--
-		turbine.app-config=api-www,api-gateway-service
+		turbine.app-config=api-www,api-www-admin
 		turbine.combine-host-port=true
 		turbine.cluster-name-expression="default"
 		<dependency>
