系统日志记录

--- a/api-config/src/main/resources/config/main/api-service-asyn.properties
+++ b/api-config/src/main/resources/config/main/api-service-asyn.properties
@@ -7,7 +7,11 @@ management.endpoints.web.exposure.include=*
 spring.cloud.stream.bindings.api_message_gateway_receiver.binder=rabbit
 spring.cloud.stream.bindings.api_message_gateway_receiver.destination=${system.message.gateway}
 spring.cloud.stream.bindings.api_message_gateway_receiver.group=${system.message.gateway.queue}
-#邮件发送
+#邮件信息
 spring.cloud.stream.bindings.api_message_mail_receiver.binder=rabbit
 spring.cloud.stream.bindings.api_message_mail_receiver.destination=${system.message.mail}
 spring.cloud.stream.bindings.api_message_mail_receiver.group=${system.message.mail.queue}
+#日志信息
+spring.cloud.stream.bindings.api_message_log_receiver.binder=rabbit
+spring.cloud.stream.bindings.api_message_log_receiver.destination=${system.message.log}
+spring.cloud.stream.bindings.api_message_log_receiver.group=${system.message.log.queue}
