--- a/api-config/src/main/resources/config/main/api-www-admin.properties
+++ b/api-config/src/main/resources/config/main/api-www-admin.properties
@@ -19,6 +19,9 @@ zipkin.collector.rabbitmq.queue=${system.message.queue.zipkin}
 #关闭hystrix.stream端点
 management.endpoint.hystrix.stream.enabled=false
 #====================stream====================
-#邮件发送
+#邮件信息
 spring.cloud.stream.bindings.api_message_mail_sender.binder=rabbit
 spring.cloud.stream.bindings.api_message_mail_sender.destination=${system.message.mail}
+#日志信息
+spring.cloud.stream.bindings.api_message_log_sender.binder=rabbit
+spring.cloud.stream.bindings.api_message_log_sender.destination=${system.message.log}
