--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -16,6 +16,10 @@ system.message.gateway.queue=api-gateway-receiver
 system.message.mail=api.message.mail
 #网关消息（队列名）
 system.message.mail.queue=api-mail-receiver
+#日志消息（交换机）
+system.message.log=api.message.log
+#日志消息（队列名）
+system.message.log.queue=api-log-receiver
 #hystrix消息（交换机）
 system.message.turbine=api.message.turbine
 #zipkin消息（队列名）
