--- a/api-www/api-www/pom.xml
+++ b/api-www/api-www/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-www</name>
-	<description>网站-前台</description>
+	<description>网站-前台（前台网站）</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
