--- a/api-admin/pom.xml
+++ b/api-admin/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-admin</name>
-	<description>Spring Admin Boot</description>
+	<description>Spring Admin Boot（基于SpringAdminBoot的管理项目）</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
