--- a/api-common/api-common-baize/pom.xml
+++ b/api-common/api-common-baize/pom.xml
@@ -5,11 +5,11 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>api-common-order</artifactId>
+	<artifactId>api-common-baize</artifactId>
 	<packaging>jar</packaging>
 
-	<name>api-common-order</name>
-	<description>通用模块-订单服务（订单相关操作）</description>
+	<name>api-common-baize</name>
+	<description>通用模块-白泽服务（页面分析处理，如：分词、统计等）</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
@@ -22,11 +22,6 @@
 		<dependency>
 			<groupId>com.acgist</groupId>
 			<artifactId>api-common</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
