--- a/api-common/api-common-user/pom.xml
+++ b/api-common/api-common-user/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-common-user</name>
-	<description>通用模块-用户服务</description>
+	<description>通用模块-用户服务（用户相关操作）</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
