--- a/api-gateway/api-gateway-admin/pom.xml
+++ b/api-gateway/api-gateway-admin/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-gateway-admin</name>
-	<description>网关-后台</description>
+	<description>网关-后台（后台网关）</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
