--- a/api-gateway/api-gateway-service/pom.xml
+++ b/api-gateway/api-gateway-service/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-gateway-service</name>
-	<description>网关-接口服务</description>
+	<description>网关-接口（提供接口服务的网关）</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
