--- a/api-www/api-www-admin/pom.xml
+++ b/api-www/api-www-admin/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-www-admin</name>
-	<description>网站-后台</description>
+	<description>网站-后台（后台网站）</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
