--- a/api-www/api-www-resources/pom.xml
+++ b/api-www/api-www-resources/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>api-www-resources</name>
-	<description>网站-静态资源</description>
+	<description>网站-静态资源（静态资源）</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
