--- a/pom.xml
+++ b/pom.xml
@@ -30,15 +30,17 @@
 		<module>api-common/api-common-asyn</module>
 		<module>api-common/api-common-user</module>
 		<module>api-common/api-common-order</module>
-		<module>api-gateway/api-gateway-www</module>
-		<module>api-gateway/api-gateway-admin</module>
-		<module>api-gateway/api-gateway-service</module>
-		<module>api-www/api-www</module>
-		<module>api-www/api-www-admin</module>
-		<module>api-www/api-www-resources</module>
+		<module>api-common/api-common-baize</module>
 		<module>api-service/api-service-asyn</module>
 		<module>api-service/api-service-user</module>
 		<module>api-service/api-service-order</module>
+		<module>api-service/api-service-baize</module>
+		<module>api-www/api-www</module>
+		<module>api-www/api-www-admin</module>
+		<module>api-www/api-www-resources</module>
+		<module>api-gateway/api-gateway-www</module>
+		<module>api-gateway/api-gateway-admin</module>
+		<module>api-gateway/api-gateway-service</module>
 	</modules>
 
 	<properties>
@@ -50,6 +52,7 @@
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
 		<c3p0.version>0.9.5.2</c3p0.version>
+		<spark.version>2.4.0</spark.version>
 		<zipkin.version>2.11.7</zipkin.version>
 		<activation.version>1.1.1</activation.version>
 		<jaxb-runtime.version>2.3.1</jaxb-runtime.version>
@@ -81,9 +84,15 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- common -->
 			<dependency>
 				<groupId>com.acgist</groupId>
 				<artifactId>api-common</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.acgist</groupId>
+				<artifactId>api-common-asyn</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -98,9 +107,10 @@
 			</dependency>
 			<dependency>
 				<groupId>com.acgist</groupId>
-				<artifactId>api-common-asyn</artifactId>
+				<artifactId>api-common-baize</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<!-- 第三方依赖 -->
 			<dependency>
 				<groupId>javax.activation</groupId>
 				<artifactId>activation</artifactId>
@@ -155,6 +165,11 @@
 				<groupId>io.zipkin.java</groupId>
 				<artifactId>zipkin-autoconfigure-storage-elasticsearch</artifactId>
 				<version>${zipkin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.spark</groupId>
+				<artifactId>spark-core_2.12</artifactId>
+				<version>${spark.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
