--- a/api-common/api-common-baize/pom.xml
+++ b/api-common/api-common-baize/pom.xml
@@ -28,6 +28,10 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
