--- a/api-service/api-service-baize/pom.xml
+++ b/api-service/api-service-baize/pom.xml
@@ -36,10 +36,14 @@
 			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_${scala.version}</artifactId>
+		    <groupId>org.apache.flink</groupId>
+		    <artifactId>flink-ml_${scala.version}</artifactId>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.apache.flink</groupId>
+		    <artifactId>flink-clients_${scala.version}</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
