--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 		<project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
 		<scala.version>2.11</scala.version>
 		<c3p0.version>0.9.5.2</c3p0.version>
-		<spark.version>2.4.0</spark.version>
+		<flink.version>1.7.0</flink.version>
 		<jsoup.version>1.11.3</jsoup.version>
 		<zipkin.version>2.11.7</zipkin.version>
 		<activation.version>1.1.1</activation.version>
@@ -163,34 +163,29 @@
 				<version>${zipkin.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.spark</groupId>
-				<artifactId>spark-core_${scala.version}</artifactId>
-				<version>${spark.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.spark</groupId>
-				<artifactId>spark-streaming_${scala.version}</artifactId>
-				<version>${spark.version}</version>
-			</dependency>
-			<dependency>
-			    <groupId>org.apache.spark</groupId>
-			    <artifactId>spark-streaming-kafka-0-10_${scala.version}</artifactId>
-			    <version>${spark.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.spark</groupId>
-				<artifactId>spark-mllib_${scala.version}</artifactId>
-				<version>${spark.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.spark</groupId>
-				<artifactId>spark-mllib-local_${scala.version}</artifactId>
-				<version>${spark.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.jsoup</groupId>
 				<artifactId>jsoup</artifactId>
 				<version>${jsoup.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.apache.flink</groupId>
+			    <artifactId>flink-ml_${scala.version}</artifactId>
+			    <version>${flink.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.apache.flink</groupId>
+			    <artifactId>flink-clients_${scala.version}</artifactId>
+			    <version>${flink.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.apache.flink</groupId>
+			    <artifactId>flink-streaming-java_${scala.version}</artifactId>
+			    <version>${flink.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.flink</groupId>
+				<artifactId>flink-connector-kafka-0.11_${scala.version}</artifactId>
+				<version>${flink.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
