--- a/api-common/api-common-baize/pom.xml
+++ b/api-common/api-common-baize/pom.xml
@@ -13,20 +13,19 @@
 
 	<parent>
 		<groupId>com.acgist</groupId>
-		<artifactId>api-parent</artifactId>
-		<version>1.0.0</version>
-		<relativePath>../../</relativePath>
+		<artifactId>api-common-parent</artifactId>
+		<version>${api.version}</version>
+		<relativePath>../</relativePath>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.acgist</groupId>
-			<artifactId>api-common</artifactId>
+			<artifactId>api-common-data</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<optional>true</optional>
+			<groupId>com.acgist</groupId>
+			<artifactId>api-common-feign</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
