--- a/api-common/api-common-feign/pom.xml
+++ b/api-common/api-common-feign/pom.xml
@@ -5,15 +5,15 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>api-gateway-service</artifactId>
+	<artifactId>api-common-feign</artifactId>
 	<packaging>jar</packaging>
 
-	<name>api-gateway-service</name>
-	<description>网关-接口（提供接口服务的网关）</description>
+	<name>api-common-feign</name>
+	<description>通用模块-feign模块</description>
 
 	<parent>
 		<groupId>com.acgist</groupId>
-		<artifactId>api-gateway-parent</artifactId>
+		<artifactId>api-common-parent</artifactId>
 		<version>${api.version}</version>
 		<relativePath>../</relativePath>
 	</parent>
@@ -21,19 +21,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.acgist</groupId>
-			<artifactId>api-common-asyn</artifactId>
+			<artifactId>api-common</artifactId>
 		</dependency>
+		<!-- feign：包含熔断功能，不包含hystrix.stream监控 -->
 		<dependency>
-			<groupId>com.acgist</groupId>
-			<artifactId>api-common-user</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.acgist</groupId>
-			<artifactId>api-common-order</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 	</dependencies>
 
