--- a/api-service/api-service-baize/pom.xml
+++ b/api-service/api-service-baize/pom.xml
@@ -13,27 +13,15 @@
 
 	<parent>
 		<groupId>com.acgist</groupId>
-		<artifactId>api-parent</artifactId>
-		<version>1.0.0</version>
-		<relativePath>../../</relativePath>
+		<artifactId>api-service-parent</artifactId>
+		<version>${api.version}</version>
+		<relativePath>../</relativePath>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.acgist</groupId>
 			<artifactId>api-common-baize</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-bus</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.flink</groupId>
@@ -43,29 +31,6 @@
 		    <groupId>org.apache.flink</groupId>
 		    <artifactId>flink-clients_${scala.version}</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<!-- 将依赖打包到生成的包里面 -->
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
