--- a/api-www/api-www-admin/pom.xml
+++ b/api-www/api-www-admin/pom.xml
@@ -13,9 +13,9 @@
 
 	<parent>
 		<groupId>com.acgist</groupId>
-		<artifactId>api-parent</artifactId>
-		<version>1.0.0</version>
-		<relativePath>../../</relativePath>
+		<artifactId>api-www-parent</artifactId>
+		<version>${api.version}</version>
+		<relativePath>../</relativePath>
 	</parent>
 
 	<dependencies>
@@ -68,17 +68,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-bus</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 		<!--
+		使用HTTP接口收集
 		turbine.app-config=api-www,api-www-admin
 		turbine.combine-host-port=true
 		turbine.cluster-name-expression="default"
@@ -95,29 +88,6 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<!-- 将依赖打包到生成的包里面 -->
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
