--- a/api-common/api-common-baize/pom.xml
+++ b/api-common/api-common-baize/pom.xml
@@ -21,15 +21,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.acgist</groupId>
-			<artifactId>api-common-data</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.acgist</groupId>
-			<artifactId>api-common-feign</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.jsoup</groupId>
-			<artifactId>jsoup</artifactId>
+			<artifactId>api-common</artifactId>
 		</dependency>
 	</dependencies>
 
