--- a/api-common/api-common-asyn/pom.xml
+++ b/api-common/api-common-asyn/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>spring-cloud-stream</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 </project>
