--- a/api-common/api-common-order/pom.xml
+++ b/api-common/api-common-order/pom.xml
@@ -27,6 +27,16 @@
 			<groupId>com.acgist</groupId>
 			<artifactId>api-common-feign</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 </project>
