--- a/api-service/api-service-asyn/src/main/resources/bootstrap.properties
+++ b/api-service/api-service-asyn/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=system
 spring.application.name=api-service-asyn
-spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,database,c3p0,bus,zipkin,mail
+spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,bus,database,c3p0,zipkin,mail
 spring.cloud.config.fail-fast=true
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=api-config
