--- a/api-service/api-service-baize/pom.xml
+++ b/api-service/api-service-baize/pom.xml
@@ -24,6 +24,10 @@
 			<artifactId>api-common-baize</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+		</dependency>
+		<dependency>
 		    <groupId>org.apache.flink</groupId>
 		    <artifactId>flink-ml_${scala.version}</artifactId>
 		</dependency>
