--- a/api-www/api-www/src/main/resources/bootstrap.properties
+++ b/api-www/api-www/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=system
 spring.application.name=api-www
-spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,redis,bus,zipkin,feign,hystrix
+spring.cloud.config.name=${spring.application.name},system,web,eureka,logger,freemarker,stream,bus,redis,zipkin,feign,hystrix
 spring.cloud.config.fail-fast=true
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=api-config
