修复新版本

--- a/api-config/src/main/resources/config/system/system.properties
+++ b/api-config/src/main/resources/config/system/system.properties
@@ -23,7 +23,7 @@ system.message.log.queue=api-log-receiver
 #hystrix消息（交换机）
 system.message.turbine=api.message.turbine
 #zipkin消息（队列名）
-system.message.queue.zipkin=api-zipkin
+system.message.zipkin.queue=api-zipkin
 #端点内网地址：多个使用逗号隔开
 system.actuator.ip.addresses=0:0::/112,192.168.1.0/24
 #端点地址：多个使用逗号隔开
