--- a/api-config/src/main/resources/config/common/zipkin.properties
+++ b/api-config/src/main/resources/config/common/zipkin.properties
@@ -1,7 +1,7 @@
 #====================链路监控====================
 #zipkin收集器
 spring.zipkin.sender.type=rabbit
-spring.zipkin.rabbitmq.queue=${system.message.queue.zipkin}
+spring.zipkin.rabbitmq.queue=${system.message.zipkin.queue}
 #sleuth配置
 spring.sleuth.sampler.probability=1.0
 spring.sleuth.messaging.rabbit.enabled=true
